--- a/package.json
+++ b/package.json
@@ -23,25 +23,21 @@
     "antd": "^4.9.1",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
-    "react-router-dom": "^5.2.0"
+    "less": "^4.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "typescript": "~3.7.2"
   },
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
   "scripts": {
-    "lint": "eslint . --ext .js,.ts,.tsx src",
+    "lint": "eslint src --ext .js,.ts,.tsx src",
     "dev-build": "webpack --profile --config ./build/webpack.dev.js",
     "start": "webpack-dev-server --config ./build/webpack.dev.js",
     "build": "webpack --config ./build/webpack.prod.js"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint"
-    }
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -68,7 +64,6 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "airbnb": "^0.0.2",
     "autoprefixer": "^9.3.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.1.0",
@@ -78,18 +73,11 @@
     "file-loader": "^2.0.0",
     "git-cz": "^4.7.1",
     "html-webpack-plugin": "^4.0.0-alpha.2",
-    "husky": "^4.2.5",
+    "less-loader": "^7.1.0",
     "mini-css-extract-plugin": "^1.2.1",
-    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-loader": "^3.0.0",
-    "prettier": "^2.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "^4.0.1",
-    "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
-    "typescript": "~3.7.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
