--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "less": "^4.0.0",
+    "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
