--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "css-loader": "^3.6.0",
     "file-loader": "^2.0.0",
     "git-cz": "^4.7.1",
+    "happypack": "^5.0.1",
     "html-webpack-plugin": "^4.0.0-alpha.2",
     "less-loader": "^7.1.0",
     "mini-css-extract-plugin": "^1.2.1",
